fixed spacing again

--- a/src/css/projects.css
+++ b/src/css/projects.css
@@ -124,8 +124,8 @@ body {
 
 .problemText, .processText, .userReaseachText, .prototypeText, .optimizationText {
     line-height: 2.25rem;
-    margin-right: 25%;
-    margin-left: 25%;
+    margin-right: 28%;
+    margin-left: 28%;
     font-size: 1rem;
 }
 
